[package]
name = "robots-txt-tester"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.1"
junit-report = "0.8.2"
lenient_bool = "0.1.1"
texting_robots = "0.2.2"
rayon = "1.10.0"
itertools = "0.14.0"
